tests/paczka1/fuzzy1/13306086.err
Error in line 4: OJM6K0kZGh S980 1,0
Error in line 8: OJM6K0kZGh A473 57,8
Error in line 11: Fx6gE6n S980 81,8
Error in line 9: S980 S980 65,3
Error in line 17: S980 A124 27,1
Error in line 2: j8dOlQp83bI S89 11,4
Error in line 20: j8dOlQp83bI A473 10,4
Error in line 26: P7YeiVegv S980 2,4
Error in line 30: P7YeiVegv S89 4,6
Error in line 34: P7YeiVegv S980 17,1
